# minimal-ten-digit-addition-transformer

./: .gitignore  first_attempts.py  manim_matmul.ipynb  manim_per_component.ipynb  manim_per_component_verdant-forest.ipynb  pyproject.toml  train.py
checkpoint/: best_137.npz  best_211.npz
